# discount-alert-bot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
bot_common/: processors.py
bot_common/broker/: __init__.py  connector.py
bot_common/database/: __init__.py  connector.py
bot_common/database/models/: __init__.py  base.py  mixin.py  products.py  users.py
bot_common/settings/: __init__.py  bot.py  broker.py  common.py  db.py  openai.py
bot_engine/: app.py  celeryconfig.py  notification.py  price_check.py
bot_engine/tasks/: live.py  scheduled.py
bot_interface/: __main__.py  app.py  bot.py  handlers.py  processors.py  schemas.py  settings.py  utils.py
deploy/bot_engine/: Dockerfile
deploy/bot_interface/: Dockerfile
deploy/broker/: Dockerfile  entrypoint.sh  rabbitmq_definitions.json
deploy/migrator/: Dockerfile
migrations/: env.py
migrations/versions/: 8cee915e28a0_make_products_initial_price_string.py  91a59140ddb5_initial_revision.py  bd960ac97553_make_users_telegram_id_integer.py  ca80d795b8e6_add_index_to_products_link_column.py  dcd4c2d10c25_make_product_notification_threshold_.py
